# cinescout

./: .env.example  .gitignore  BRIGHTON_PLAN.md  CLAUDE.md  README.md  dev.sh  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  bfi_page.html  debug_date_parent.py  debug_date_time_structure.py  debug_pcc_date_time.py  debug_pcc_full_card.py  debug_pcc_grouping.py  debug_pcc_structure.py  debug_pcc_title.py  debug_structure.py  debug_whats_on.py  debug_whats_on_detail.py  fly.toml  garden_page.html  prince_charles_page.html  prince_charles_whats_on.html  pyproject.toml  requirements.txt  test_garden_parse.py  test_pcc_whats_on.py  test_prince_charles_parse.py
backend/alembic/: env.py
backend/alembic/versions/: 2024_01_30_1200-001_initial_schema.py  2026_02_16_2159-634b659320ca_add_cast_field_to_films.py  2026_02_19_2017-fa43a344e13d_add_pricing_to_cinemas.py
backend/src/cinescout/: __init__.py  config.py  database.py  main.py
backend/src/cinescout/admin/: app.py  auth.py  views.py
backend/src/cinescout/models/: __init__.py  base.py  cinema.py  film.py  film_alias.py  showing.py
backend/src/cinescout/schemas/: __init__.py  cinema.py  film.py  showing.py
backend/tests/: conftest.py
backend/tests/api/: test_admin.py  test_cinemas.py  test_health.py  test_showings.py
backend/tests/scrapers/: test_bfi_live.py  test_curzon.py  test_nickel.py  test_nickel_live.py  test_prince_charles.py  test_regent_street.py  test_rio.py
backend/tests/unit/: test_distance_enrichment.py  test_film_matcher.py  test_geo.py  test_text.py  test_tmdb_client.py
(+82 files in other folders)
